--- a/sass/composants/_recherche.scss
+++ b/sass/composants/_recherche.scss
@@ -2,9 +2,9 @@
   display: flex;
   align-items: center;
   position: relative;
-}
 
-.recherche__input {
+
+&__input {
   padding: 5px 10px;
   border: 1px solid #ccc;
   margin-right: 10px;
@@ -12,7 +12,7 @@
   font-size: 14px;
 }
 
-.recherche img {
+&__recherche img {
   position: absolute;
   right: 10px;
   top: 50%;
@@ -22,7 +22,7 @@
   height: 20px;
   padding-right: 10px;
 }
-
+}
 @media (max-width: $point__rupture) {
   .recherche {
     display: none;
