s4c1 debut de l'etape 3

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -38,6 +38,7 @@ Les composants
 @import "composants/hero";
 @import "composants/menu";
 @import "composants/carte";
+@import"composants/footer";
 
 /*  ////////////////////////////////
 Les layouts
